ui bugfixes: minor fix to set viewport to actual hight on mobile screens

--- a/src/pages/intro/IntroductionPage.scss
+++ b/src/pages/intro/IntroductionPage.scss
@@ -1,17 +1,23 @@
 .IntroductionPage {
   position: relative;
-  width: 100%;
-  height: 100%;
 
-  .slide {
-    background-size: cover;
-    background-position: center;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  .carousel {
+
+    .slide-element {
+      width: 100vw;
+      height: 100vh;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      // TODO: add real detection for mobile screens
+      @media screen and (max-height: 700px) {
+        height: calc(100vh - 72px);
+      }
+    }
   }
 
   .navigation {
